--- a/new-sdk-solution/frontend/package.json
+++ b/new-sdk-solution/frontend/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@splidejs/vue-splide": "^0.6.12",
     "axios": "^1.5.0",
     "element-plus": "^2.6.1",
